# router/order.go
@@ -8,5 +8,6 @@ func RegisterOrderRouter() {
 		orderRouter.POST("/addOrder", service.AddOrder)
 		orderRouter.GET("/orderList", service.AllOrderList)
 		orderRouter.GET("/myOrderList", service.MyOrderList)
+		orderRouter.DELETE("/deleteOrderById", service.DeleteOrderById)
 	}
 }
